fix:  button wrapping

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -30,6 +30,12 @@
     'editor editor';
 }
 
+.icon-button-row {
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: nowrap;
+}
+
 .icon-button {
   border: none;
   background-color: transparent;
@@ -63,8 +69,6 @@
   border-left: 1px solid $ui-03;
   position: absolute;
   right: 0;
-  display: flex;
-  flex-direction: column;
   width: 240px;
   box-shadow: -2px 2px 6px rgba(0, 0, 0, 0.2);
   height: 100%;
